# rdrop

./: .gitignore  Cargo.toml  Dockerfile.nginx  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile
backend/old/: db.rs
backend/src/: main.rs  ws.rs
frontend/: astro.config.mjs  package-lock.json
frontend/public/: app.js
frontend/src/pages/: index.astro
src/: main.rs
static/: app.js  index.html
